<?xml version="1.0"?>
<package format="3">
  <name>pf_localization</name>
  <version>0.0.0</version>
  <description>The pf_localization package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache v2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>quaternion_operation</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>geometry_msgs_data_buffer</build_depend>
  <build_depend>data_buffer</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>quaternion_operation</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclcpp_components</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>libgoogle-glog-dev</build_export_depend>
  <build_export_depend>geometry_msgs_data_buffer</build_export_depend>
  <build_export_depend>data_buffer</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>quaternion_operation</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>libgoogle-glog-dev</exec_depend>
  <exec_depend>geometry_msgs_data_buffer</exec_depend>
  <exec_depend>data_buffer</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
